fix-alignements-aside-footer

--- a/src/app/private/pages/team/template/template.scss
+++ b/src/app/private/pages/team/template/template.scss
@@ -228,7 +228,7 @@
 }
 
 .aside-footer {
-    padding: 16px;
+    padding: 6px;
     border-top: 1px solid var(--border);
 }
 
